--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 @import url("https://lazylibrary.netlify.app/components.css");
-@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
 :root{
   --off-white: rgb(214, 214, 214)
@@ -17,7 +16,7 @@ body {
   flex-direction: column;
   min-height: 100vh;
   overflow-x: hidden;
-  color: var(--text-color);
+  color: var(--black);
 }
 
 a {
