minor styling fix

--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,7 +12,10 @@
   color: var(--hover-effect);
 }
 
+.icon-container{
+  padding: 0.7rem;
+}
+
 .icon-container .icon-badge{
-  top: -0.5rem;
-  right: -0.5rem;
+  font-size: 1rem;
 }
