--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -104,8 +104,14 @@
 }
 
 
-@media screen and (max-width: 600px){
-.categories-container {
-    grid-template-columns: repeat(auto-fill,minmax(225px,1fr));
-    padding: 0;
-}}
+@media screen and (max-width: 750px){
+    .categories-container {
+        grid-template-columns: repeat(auto-fill,minmax(225px,1fr));
+        padding: 0;
+    }
+
+
+    .featured-category .featured-grid{
+        grid-template-columns: repeat(auto-fill,minmax(250px,1fr));
+    }
+}
