--- a/src/pages/auth/auth.css
+++ b/src/pages/auth/auth.css
@@ -6,7 +6,7 @@
 }
 
  .auth-card .UI-Interaction .button-primary{
-    margin: 0rem 0 0.25rem 0;
+    margin: 0.25rem 0 0.25rem 0;
  }
 
  .auth-card .UI-Interaction .card-action{
@@ -30,6 +30,11 @@
     margin-top: 2rem;
     width: 30vw;
     max-width: 500px;
+}
+
+.auth-card .link{
+    text-decoration: underline;
+    color: var(--primary-color);
 }
 
 .auth-card .card-heading{
@@ -65,6 +70,7 @@
 
 .auth-card .input-label {
     font-weight: 300;
+    text-align: left;
 }
 
 .auth-card .success-icon{
@@ -76,7 +82,7 @@
     display: flex;
     align-items: center;
     gap: 1rem;
-    padding: 2rem 1rem 2rem 1rem;
+    padding: 1rem 1rem 1rem 1rem;
     margin: 3rem auto 3rem auto;
     width: fit-content;
     text-align: center;
