--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -36,13 +36,13 @@
 
 @media screen and (max-width: 700px){
   .nav-links *{
-    margin: 0.5rem 0.25rem 0.5rem 0.25rem;
+    margin: 8px 4px 8px 4px;
   }
 
   .nav-bar .brand-tag{
     margin: 0 auto 0 0 ;
-    padding-bottom: 0.25rem;
-    padding-top: 0.25rem;
+    padding-bottom: 4px;
+    padding-top: 4px;
   }
 
   .nav-links .icon-container{
@@ -61,7 +61,7 @@
   }
 
   .nav-links .button{
-    padding: 0.5rem;
+    padding: 8px;
     font-size: 1rem;
   }
 }
